# elasticity-parameter-inference

./: LICENSE  README.md  pyproject.toml
data/: DIC_observations.npz  DIC_observations_N=10.npz  DIC_observations_N=100.npz  DIC_observations_N=1000.npz  DIC_observations_N=10000.npz
scripts/: data_generation.py  map_estimator.py  plot_posterior.py
src/elasticity/: MAP_estimator.py  __init__.py  distributions.py  forwardPDESolver.py  importance_sampler.py  observe.py
